# xiaoshuo

./: .gitignore  AGENTS.md  AGENT_ONBOARDING.md  AI_PROTOCOL.md  CHANGES.md  CODEBUDDY.md  DESIGN.md  HANDOFF.md  README.md  REFACTOR_PLAN.md  config.yaml  novel.py  pyproject.toml  run.bat  theme-color-preview.html  建议
.codebuddy/: settings.json
adhoc/: README.md  add_books.py  check_encoding.py  convert_encoding.py  generate_quality_report.py  test_scene_search.py
agents/: __init__.py  chapter_decisions.py  character_designer.py  cross_review.py  model_orchestrator.py  outline_builder.py  session_manager.py  skill_loader.py  state_machine.py  world_builder.py
analysis/: README.md  analyze_all.py  book_processor.py  calibrate_rules.py  calibrate_v2.py  checkpoint.py  comparison_engine.py  contract_chain.py  creative_bridge.py  cross_book_synthesis.py  data_quality_audit.py  deep_diagnosis.py  feedback_loop.py  generate_final_report.py  generate_writer_guidance.py  genre_synthesizer.py  llm_batch_score.py  llm_labeler.py  quality_gate.py  recursive_summarize.py  rhythm_analyzer.py  rhythm_auditor.py  score_auditor.py  structure_comparator.py  style_detection_loop.py  synthesis_reporter.py  writing_instructions.py
data/: README.md  deepseek_cache.json  deepseek_records.jsonl  pipeline_stage.json  qwen_scores.jsonl  score_comparison.json  tasks.json
disassembly-review-assessment/: disassembly-review-assessment.html
docs/: CODEBUDDY.md  DS_项目简报.md  INDEX.md  REVIEW_REPORT.md  crawler_autopsy.md  external_review_v2.md  external_review_v2_汇总.md  external_review_v3.md  external_review_v3_汇总.md  external_review_指令.md  external_review_汇总.md  架构与目录优化方案_vFinal.md  架构重构优化方案_穷举搜索.md
frontend/: index.html
novel-ux-research/: novel-ux-research.html
prototype/: app.js  design-system.md  index.html  library_data.json  server.py  styles.css
run/: README.md
scripts/: README.md  __init__.py  _help.txt  convert_encoding.py  fix_encoding.py  gen_library_data.py  lint.bat  patch_prototype_data.py  progress_server.bat  progress_server.py  reorganize_dirs.py  smoke_test_frontend.py  start_all.bat  start_model.bat  start_prototype.bat  stress_test.bat  switch_model.py  test_cross_review.py  test_swap.py  watch_books.py
tests/: __init__.py  p0_bugcheck.py  p0_stress.py  p0_ultimate.py  smoke_test.py  test_book_processor.py  test_character_arc.py  test_knowledge_brain.py  test_p0_fixes.py  test_p2_modules.py  test_quality_gate.py  test_structure_input.md  test_style_dna.py
(+324 files in other folders)
