[project]
name = "xiaoshuo"
version = "8.0"
description = "番茄小说AI辅助创作系统 — 数据驱动的网文创作指导·三层拆书深度架构"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "scipy>=1.12",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1",
]
llm = [
    "llmlingua>=0.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
